--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.mg-rt {
+  margin-right: 2.15%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 5vh;
+  padding: 2vw;
+  background-image: linear-gradient(to right, #672280, #a626d3);
   color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.header-img {
+  height: 120%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-text {
+  margin-left: 1vw;
+  margin-right: auto;
+  letter-spacing: -0.05em;
+}
+
+.main {
+  padding: 5vh 3vw;
+}
+
+.input-fields {
+  border: 1px solid #d5d4d8;
+  border-radius: 5px;
+  height: 7vh;
+  text-indent: 20px;
+  width: 46%;
+  font-size: 1.25rem;
+}
+
+.input-fields:focus {
+  outline: none;
+}
+
+.btn {
+  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
+  border-radius: 5px;
+  border: none;
+  width: 100%;
+  height: 7vh;
+  margin: 2vh 0;
+  color: white;
+  font-size: 1.25rem;
+  letter-spacing: -0.05em;
+  cursor: pointer;
+}
+
+.meme-image-box {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.meme-image {
+  width: 30%;
+  max-height: 450px;
 }
