--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
   padding: 0;
 }
 
-.mg-rt {
-  margin-right: 2.15%;
+main {
+  padding: 40px;
 }
 
 .header {
@@ -26,43 +26,66 @@
   letter-spacing: -0.05em;
 }
 
-.main {
-  padding: 5vh 3vw;
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 20px;
+  margin-bottom: 17px;
 }
 
-.input-fields {
+.form-input {
+  border-radius: 5px;
   border: 1px solid #d5d4d8;
-  border-radius: 5px;
-  height: 7vh;
   text-indent: 20px;
-  width: 46%;
-  font-size: 1.25rem;
-}
-
-.input-fields:focus {
-  outline: none;
-}
-
-.btn {
-  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
-  border-radius: 5px;
-  border: none;
-  width: 100%;
+  font-size: 1.15rem;
   height: 7vh;
-  margin: 2vh 0;
-  color: white;
-  font-size: 1.25rem;
-  letter-spacing: -0.05em;
-  cursor: pointer;
 }
 
-.meme-image-box {
+.form-button {
+  grid-column: 1 / -1;
+  border-radius: 5px;
+  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
+  color: white;
+  border: none;
+  cursor: pointer;
+  height: 7vh;
+  font-size: 1.15rem;
+}
+
+.meme {
   display: flex;
-  width: 100%;
+  position: relative;
   justify-content: center;
+  grid-column: 1 / -1;
 }
 
 .meme-image {
-  width: 30%;
-  max-height: 450px;
+  max-width: 100%;
+  border-radius: 3px;
+}
+
+.meme-text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
